# bit-vector

./: .gitignore  CMakeLists.txt  README.md
include/: bit_vector.h
src/: CMakeLists.txt  bit_vector.c
tests/: CMakeLists.txt  test_bit_vector.c
